# fortress-governance-engine

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  flake.nix
.github/workflows/: verify.yml
src/: main.rs
